[gd_scene load_steps=4 format=3 uid="uid://cpvoe4uv3c582"]

[ext_resource type="Script" path="res://Scripts/item.gd" id="1_i5vey"]
[ext_resource type="FontFile" uid="uid://dfgquxtt5xcmd" path="res://fonts/FUTURA65MEDIUM.TTF" id="2_nun8y"]
[ext_resource type="FontFile" uid="uid://ccn4y78kk8aay" path="res://fonts/FUTURA55REGULAR.TTF" id="3_3mll2"]

[node name="Item" type="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(800, 0)
offset_right = 1080.0
offset_bottom = 389.0
script = ExtResource("1_i5vey")

[node name="Question" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nun8y")
theme_override_font_sizes/font_size = 60
text = "1. This is a sample question 1"
autowrap_mode = 3

[node name="A" type="CheckBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 73)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="A"]
custom_minimum_size = Vector2(760, 73)
layout_mode = 0
offset_left = 25.0
offset_top = 4.0
offset_right = 504.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50
text = "This is a sample choice A"
autowrap_mode = 3

[node name="B" type="CheckBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 73)
layout_mode = 2
size_flags_horizontal = 5
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="B"]
custom_minimum_size = Vector2(760, 73)
layout_mode = 0
offset_left = 25.0
offset_top = 4.0
offset_right = 785.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50
text = "This is a sample choice B"
autowrap_mode = 3

[node name="C" type="CheckBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 73)
layout_mode = 2
size_flags_horizontal = 5
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="C"]
custom_minimum_size = Vector2(760, 73)
layout_mode = 0
offset_left = 25.0
offset_top = 4.0
offset_right = 785.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50
text = "This is a sample choice C"
autowrap_mode = 3

[node name="D" type="CheckBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(760, 73)
layout_mode = 2
size_flags_horizontal = 5
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="D"]
custom_minimum_size = Vector2(760, 73)
layout_mode = 0
offset_left = 25.0
offset_top = 4.0
offset_right = 785.0
offset_bottom = 77.0
theme_override_fonts/font = ExtResource("3_3mll2")
theme_override_font_sizes/font_size = 50
text = "This is a sample choice D"
autowrap_mode = 3

[connection signal="pressed" from="A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="D" to="." method="_on_d_pressed"]
